[package]
name = "proust"
description = "Framework for testing Bank credit card processing systems (ISO8583)"
version = "0.1.6"
authors = ["Tim Gabets <tim@gabets.ru>"]
edition = "2018"
readme = "README.md"
license = "GPL-3.0"
categories = ["web-programming::http-server", "development-tools", "simulation"]
keywords = ["iso8583", "card", "processing"]
repository = "https://github.com/timgabets/proust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-xml-rs = "0.4.0"
serde_derive = "1.0.106"
rand = "0.7"
chrono = "0.4.11"
hyper = "0.13.0"
tokio = { version = "0.2", features = ["full"] }
async-std = "1.5.0"

