[package]
name = "lakgves"
description = "Framework for testing Bank credit card processing systems (ISO8583)"
version = "0.1.15"
authors = ["Tim Gabets <tim@gabets.ru>"]
edition = "2018"
readme = "README.md"
license = "MIT"
categories = ["web-programming::http-server", "development-tools", "simulation"]
keywords = ["iso8583", "card", "processing"]
repository = "https://github.com/timgabets/lakgves"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.0"
actix-web = "2.0"
async-std = "1.5.0"
chrono = "0.4.11"
dhi-xml = "0.1"
futures = "0.3.4"
log = "0.4"
rand = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.106"
serde_json = "1.0"
serde-xml-rs = "0.4.0"
sp-xml = "0.1"
structopt = "0.3.14"
toml = "0.5.6"
xml-rs = "0.8.0"
[package.metadata.rpm.cargo]
buildflags = ["--release"]

[package.metadata.rpm.targets]
lakgves = { path = "/usr/bin/lakgves" }

[package.metadata.rpm.files]
"config.toml" = { path = "/etc/lakgves/config.toml", username = "root", groupname = "root", mode = "640" }

